skin/frontend/ultimo/wind_chimes/css/styles.css
/* ... */
.pager .pages strong,
.pager .pages span { float:left; margin-right:5px; font-weight:normal; }
.pager .pages ol { display:inline-block; vertical-align:middle; }
.pager .pages li { float:left; margin:0 0 0 1px; display:block; text-align:center; }
.pager .pages li a { display:block; color:inherit; }
.pager .pages a.previous,
.pager .pages a.next { font-size:16px; }

/* Toolbar. Pager and sorter inside toolbar
-------------------------------------------------------------- */
.toolbar {
	border-top:1px solid #e5e5e5;
	border-bottom:1px solid #e5e5e5;
	margin-bottom:-1px; /* To cover the top line of the products grid/list */

	/* Move up to cover adjacent lines/elements */
	position:relative;
	z-index:1;
}

/* Pager inside toolbar - align center */
.toolbar .pager { margin:0; border-bottom:none; border-top:1px dashed #e5e5e5; text-align:center; }
.toolbar .pager .pages { display:inline-block; float:none; }

/* Bottom toolbar */
.toolbar-bottom { margin-top:10px; }
.toolbar-bottom .toolbar { border-bottom:none; }
.toolbar-bottom .toolbar .pager { border-top:none; }
.toolbar-bottom .sorter { display:none; }

/* Common styles for toolbar elements
-------------------------------------------------------------- */

	/* Height */
	.sorter,
	.pager { line-height:36px; } /* Important: the same as the height of the form elements */

	/* Icons */
	.sorter .view-mode .grid,
	.sorter .view-mode .list,
	.sorter .sort-by .category-asc,
	.sorter .sort-by .category-desc {
		display:inline-block;
		vertical-align: middle;
		font-size:14px;
	}

	/* Icons and elements of pager */
	.sorter .view-mode .grid,
	.sorter .view-mode .list,
	.sorter .sort-by .category-asc,
	.sorter .sort-by .category-desc,
	.pager .pages .current,
	.pager .pages li a {
		width:30px;
		height:30px;
		line-height:30px;
		text-align:center;
	}

	/* Amount */
	.pager .amount,
	.sorter .amount { float:left; padding-right:10px; margin-right:10px; background:url(../images/img/link-separator.png) right center no-repeat; }

	/* Limiter */
	.pager .limiter,
	.sorter .limiter { float:left; margin-right:15px; }


/* Data Table
%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
*/
.data-table { width:100%; }
.data-table th,
.data-table td { padding:10px; font-size: 1.2222em;}
.data-table thead { background:none; border-bottom:1px solid #e5e5e5; }
.data-table thead th { font-weight:bold; vertical-align:bottom; border-right: none; }
.data-table thead th.wrap { white-space:normal; }

.data-table tr.odd td,
.data-table tr.odd th {border-left:1px solid #f5f5f5;}
.data-table tr.odd td.last { border-right:none; }
.data-table tr.odd {}
.data-table tr.odd.last { border-bottom:#eee solid 1px; }

.data-table tr.even td,
.data-table tr.even th { border-left:1px solid #f5f5f5; }
.data-table tr.even td.last { border-right:none; }
.data-table tr.even { background-color:#DFE7EB; }

.data-table tbody tr:hover {}
.data-table tbody tr.product-shop-row:hover { background-color:#fff; } /*TODO:?*/
.data-table tbody.odd {}
.data-table tbody.odd td { border-width:0 1px; }
.data-table tbody.odd tr.last { border-bottom:#e5e5e5 solid 1px; }
.data-table tbody.even { background-color:#f5f5f5; }
.data-table tbody.even td { border-width:0 1px; }
.data-table tbody.odd tr.border td,
.data-table tbody.even tr.border td {}
.data-table th .tax-flag { /*white-space:nowrap;*/ font-weight:normal; }

/* Additional classes for mobile devices
-------------------------------------------------------------- */
/* Cell title */
.data-table .cell-label { display:none; }


/* Shopping cart total summary row expandable to details
%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
*/
tr.summary-total { cursor:pointer; }
tr.summary-total td {}
tr.summary-total .summary-collapse { float:right; text-align:right; padding-left:20px; background:url(../images/bkg_collapse.gif) 0 4px no-repeat; cursor:pointer; }
tr.show-details .summary-collapse { background-position:0 -53px; }
tr.show-details td {}
tr.summary-details td { font-size:11px; background-color:#f5f5f5; color:#777; padding:2px 5px !important; }
tr.summary-details-first td { border-top:1px solid #d5d5d5; }
tr.summary-details-excluded { font-style:italic; }


/* Shopping cart tax info
%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
*/
.cart-tax-info { display:block; }
.cart-tax-info,
.cart-tax-info .cart-price { padding-right:20px; }
.cart-tax-total { display:block; padding-right:20px; background:url(../images/bkg_collapse.gif) 100% 4px no-repeat; cursor:pointer; }
.cart-tax-info .price,
.cart-tax-total .price { display:inline !important; font-weight:normal !important; }
.cart-tax-total-expanded { background-position:100% -53px; }


/* Misc
%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
*/
.link-cart { font-weight:bold; }
.link-reorder { font-weight:bold; }
.link-print { background:url(../images/i_print.gif) 0 center no-repeat; padding:2px 0 2px 25px; }
.link-rss { background:url(../images/i_rss.gif) 0 center no-repeat; padding-left:16px; white-space:nowrap; }

.cards-list dt { margin:5px 0 0; }
.cards-list .offset { padding:2px 0 2px 20px; }

.separator { margin:0 3px; font-weight:normal; color:#e5e5e5; }
.divider { clear:both; display:block; font-size:0; line-height:0; height:1px; margin:10px 0; background:#e5e5e5; text-indent:-9999em; overflow:hidden; }

/* Global site notices
-------------------------------------------------------------- */
.global-site-notice { background:#f5f5f5; color:#333; }
.global-site-notice .notice-inner { max-width:66%; margin:0 auto; padding:10px 0 10px 80px; background:url(../images/i_notice.gif) 20px center no-repeat; text-align:left; }
.global-site-notice .notice-inner p { width:80%; margin:0; padding:10px 10px 10px 0; display:inline-block; vertical-align:middle; }
.global-site-notice .notice-inner .actions { display:inline-block; vertical-align:middle; }
/* ... */

